# nucore-ai

./: .gitignore  README.md  crap.json  nucore_out.json  pyproject.toml  requirements.txt
legacy/: device_rag_formatter.py  json_duplicate_detector.py  nucore.py  openai_assistant.py  profile_rag_formatter.py  rag_db.py
legacy/assistant/: claude_assistant.py  generic_assistant.py  old_base_assistant.py  openai_assistant.py  prompt_orchestrator.py
legacy/config/: config.py
legacy/device_filter/: prompt.md
legacy/prompts/: nucore.openai-working.prompt  nucore.qwen.profile.prompt
legacy/rag/: local_embedder.py  rag_db.py  rag_processor.py  static_info_rag_formatter.py
legacy/routine_filter/: config.json  handler.py  prompt.md
legacy/scheduler/: __init__.py  example_plugin_usage.py  hebcal_provider.py  test_full_permutations.py  us_federal_provider.py
legacy/tools/: nucore_router_llamacpp_debug.json
path/hnsw_nucore.assistant/: store.sqlite3
platform/: config.py  nucore.py  start_servers.py
platform/assistant/: assistant.py  nucore.system.prompt
platform/iox/: nucore_api.py  nucore_programs.py
platform/rag/: device_rag_formatter.py  rag_formatter.py  rag_processor.py  reranker.py  start.rag copy.server  start.rag.server  static_info_rag_formatter.py  tools_rag_formatter.py
src/: __init__.py  crap.json  crap2.json
src/assistant/: __init__.py  assistant.py  base_assistant.py  chat.py  claude_assistant.py  generic_assistant.py  openai_assistant.py  openai_assistant_responses.py  prompt_mgr.py  prompt_orchestrator.py
src/intent_handler/: README.md  __init__.py  base.py  bounded_agentic.py  directory_monitor.py  dispatch_builder.py  loader.py  models.py  nucore_interface.py  provider_clients.py  provider_dispatch_adapter.py  router.py  run_intent_runtime.py  runtime.py  session_store.py  stream_handler.py
src/intent_handler_directory/: README.md  __init__.py
src/iox/: __init__.py  iox_shared_enums.py  iox_wrapper.py  subscription_events.md
(+224 files in other folders)
