[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucore-ai"
version = "1.3.0"
description = "Lightweight library for command/control/optimization/automation of smart home devices using LLMs"
readme = "README.md"
license = "MIT"
authors = [
 { name="Michel Kohanim", email="michel@universal-devices.com" },
]
dependencies = [
 "requests",
 "openai",
 "numpy",
 "httpx",
 "APScheduler>=3.10,<4.0",
 "astral>=2.2",
 "aiohttp>=3.9",
 "pytest-asyncio",
 "fastapi",
 "websockets",
 "uvicorn",
]
urls = { "Homepage" = "https://github.com/NuCoreAI/nucore-ai.git" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["assistant*", "rag*", "nucore*", "iox*", "intent_handler*", "intent_handler_directory*", "utils*"]
exclude = ["tests*", "*.tests", "*.tests.*"]

[tool.setuptools.package-data]
intent_handler = ["runtime_assets/common_modules/*.md", "runtime_assets/*.json", "runtime_assets/router/*.md", "runtime_assets/router/*.json", "runtime_assets/memory_store/*.md", "runtime_assets/memory_store/*.json"]
intent_handler_directory = ["README.md", "**/*.py", "**/*.md", "**/*.json"]
